[branch_9x] SOLR-17321:  Remove Deprecated URL ctors in Preparation for Java 21 (#2528)
* SOLR-17321:  Remove Deprecated URL ctors in Preparation for Java 21 (#2501)

* Switch to URI
* Added URL to the forbidden API

-------------

Co-authored-by:  Uwe Schindler <uschindler@apache.org>
Co-authored-by: David Smiley <dsmiley@apache.org>
(cherry picked from commit 2a56bfc2d8b48d1c93d683515569e2e97acf2077)